# headline-generator-app

./: README.md  headline-generation-training.ipynb  headline_training_experiment.ipynb  main.py  pyproject.toml  requirements.txt  streamlit_app.py
src/: __init__.py  data_utils.py  model_config.py  train_headline_model.py  training_utils.py
