[project]
name = "headline-generator-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.47.0",
    "datasets>=4.1.1",
    "peft>=0.17.1",
    "rouge-score>=0.1.2",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "transformers[torch]>=4.56.2",
    "trl>=0.23.0",
]
